[gd_scene load_steps=4 format=3 uid="uid://dg0rjuupure6t"]

[ext_resource type="Script" path="res://Scenes/Tutorial/tutorial.gd" id="1_blgta"]
[ext_resource type="PackedScene" uid="uid://ntqk7xfejn0i" path="res://Scenes/Tutorial/mainTutorial.tscn" id="2_nq1gy"]
[ext_resource type="Texture2D" uid="uid://1eb80cwr8g7q" path="res://Resources/Tutorial/TutorialLittleCircle.png" id="3_xkl86"]

[node name="Tutorial" type="Node3D"]
script = ExtResource("1_blgta")

[node name="MainTutorial" parent="." instance=ExtResource("2_nq1gy")]

[node name="Control" type="Control" parent="."]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEdit" type="TextEdit" parent="Control"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 20
text = "- Para ello tendr치s que acabar con tus enemigos y obtener sus puntos de experiencia, los cuales te permitir치n hacerte m치s fuerte y por tanto, sobrevivir m치s tiempo."
placeholder_text = "a"

[node name="LittleCircle" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -3508.0
offset_top = -4197.0
offset_right = -1502.0
offset_bottom = -2191.0
scale = Vector2(4, 4)
texture = ExtResource("3_xkl86")

[node name="ReallyLittleCircle" type="TextureRect" parent="Control"]
visible = false
layout_mode = 0
offset_left = -1508.0
offset_top = -1501.0
offset_right = 498.0
offset_bottom = 505.0
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_xkl86")

[node name="ExplanationText" type="Label" parent="Control"]
layout_mode = 0
offset_left = -520.0
offset_top = 133.0
offset_right = 268.0
offset_bottom = 186.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "This you ? XD"
horizontal_alignment = 1

[node name="Next" type="Button" parent="Control"]
process_mode = 2
layout_mode = 0
offset_left = 297.0
offset_top = 228.0
offset_right = 567.0
offset_bottom = 317.0
theme_override_font_sizes/font_size = 48
text = "Continuar"

[node name="Salir" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = 272.0
offset_right = 73.0
offset_bottom = 303.0
grow_horizontal = 2
grow_vertical = 2
text = "salir del tutorial"

[node name="effects" type="Timer" parent="."]
process_mode = 3
wait_time = 0.001

[node name="tryYourself" type="Timer" parent="."]
process_mode = 3
wait_time = 5.0

[connection signal="pressed" from="Control/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Control/Salir" to="." method="_on_salir_pressed"]
[connection signal="timeout" from="effects" to="." method="_on_efectos_timeout"]
[connection signal="timeout" from="tryYourself" to="." method="_on_try_yourself_timeout"]
